hard-gists/d100a028027c5a6b8340/run.log
=== Docker Run Log for d100a028027c5a6b8340 ===
Started at: Mi 29. Okt 20:20:15 CET 2025

[2025-10-29 20:20:16] START: Running container for d100a028027c5a6b8340
[2025-10-29 20:20:16] SUCCESS: Container 9385da3a1a105b0f393555e6bc2fa9d53005f9decb15e981216b1621b5379a60 started for d100a028027c5a6b8340
=== Container logs for d100a028027c5a6b8340 ===
  File "/snippet.py", line 46
    print "NYSE Holidays\n"
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d100a028027c5a6b8340 ===
[2025-10-29 20:20:18] INFO: Container 9385da3a1a105b0f393555e6bc2fa9d53005f9decb15e981216b1621b5379a60 has stopped
